--- a/Obsidian.Stripped/Obsidian.Stripped.csproj
+++ b/Obsidian.Stripped/Obsidian.Stripped.csproj
@@ -17,4 +17,7 @@
 		<ProjectReference Include="..\Obsidian\Obsidian.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Interop\" />
+	</ItemGroup>
 </Project>
