--- a/Obsidian.Stripped/Obsidian.Stripped.csproj
+++ b/Obsidian.Stripped/Obsidian.Stripped.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
