--- a/Obsidian.Stripped/Obsidian.Stripped.csproj
+++ b/Obsidian.Stripped/Obsidian.Stripped.csproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MediatR" Version="12.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
@@ -15,6 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Obsidian.Stripped.BusinessLogic\Obsidian.Stripped.BusinessLogic.csproj" />
 		<ProjectReference Include="..\Obsidian\Obsidian.csproj" />
 	</ItemGroup>
 </Project>
